[package]
name = "jsonrpsee-proc-macros"
description = "Procedueral macros for jsonrpsee"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", default-features = false, features = ["extra-traits", "full", "visit", "parsing", "printing", "clone-impls", "proc-macro"] }
proc-macro-crate = "1"
heck = "0.4.0"

# sovereign-sdk-fork dependencies
serde_json = "1"
serde = "1"
uuid = { version = "1.4", features = ["v4"] }

[dev-dependencies]
jsonrpsee = { path = "../jsonrpsee", features = ["server", "client-core", "http-client", "ws-client", "macros"] }
trybuild = "1.0"
tokio = { version = "1.16", features = ["rt", "macros"] }
futures-channel = { version = "0.3.14", default-features = false }
futures-util = { version = "0.3.14", default-features = false }
serde_json = "1"
serde = "1"
